frontend/deployment/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bc58-frontend
  labels:
    app: bc58-fr
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: bc58-fr
    
  template:
    metadata:
      name: bc58-fr
      labels:
        app: bc58-fr
    spec:
      containers:
        - name: bc58-frontend
          image: ghcr.io/sreenidhize/bc58frontendserver:123
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets: 
        - name: mysecret
        # nkdwqf wqfkqFQEJF JFJEWKFWEJ

---
apiVersion: v1
kind: Service
metadata:
  name: bc58-fronted
  labels:
    app: bc58-fr
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: bc58-fr
