frontend/deployment/ingress-fr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bc58-ingress-fr
  labels:
    name:  bc58-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
   ingressClassName: nginx
   rules:
   - host: bc58.ga
     http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: bc58-fronted
            port:
              number: 80
